force-app/main/default/objects/Market_Signal__c/Market_Signal__c.object-meta.xml
<CustomObject>
    <label>Market Signal</label>
    <nameField>
        <label>Signal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Signal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>