force-app/main/default/objects/Market_Signal__c/fields/Demand_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Demand_Forecast__c</fullName>
    <label>Demand Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>