force-app/main/default/objects/Market_Signal__c/fields/Energy_Price_MWh__c.field-meta.xml
<CustomField>
    <fullName>Energy_Price_MWh__c</fullName>
    <label>Energy Price ₹/MWh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>