force-app/main/default/objects/Market_Signal__c/fields/Market_Signal_Key__c.field-meta.xml
<CustomField>
    <fullName>Market_Signal_Key__c</fullName>
    <externalId>true</externalId>
    <label>Market Signal Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>