force-app/main/default/objects/Market_Signal__c/fields/Signal_Source__c.field-meta.xml
<CustomField>
    <fullName>Signal_Source__c</fullName>
    <label>Signal Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Market</fullName>
            </value>
            <value>
                <fullName>Forecast</fullName>
            </value>
            <value>
                <fullName>Weather</fullName>
            </value>
            <value>
                <fullName>Grid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>