force-app/main/default/objects/Market_Signal__c/fields/Volatility_Index__c.field-meta.xml
<CustomField>
    <fullName>Volatility_Index__c</fullName>
    <label>Volatility Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>